samples/_failures_safe/1761550925_aa40f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92e4ad0a.c: In function ‘main’:
./samples/SAFE/__tmp_92e4ad0a.c:144:9: error: expected declaration or statement at end of input
  144 |         printf("3. Transpose matrix A\n");
      |         ^~~~~~
./samples/SAFE/__tmp_92e4ad0a.c:144:9: error: expected declaration or statement at end of input
